# exchange_tracker

./: Cargo.toml  README.md  build.rs
client/: Cargo.toml  build.rs
client/src/: main.rs
common/proto/: orderbook.proto
server/: Cargo.toml  build.rs  config.yml
server/src/: config.rs  exchange_listener.rs  lib.rs  main.rs  server.rs
server/src/binance/: api.rs  mod.rs
server/src/bitstamp/: api.rs  mod.rs
src/: exchange_listener.rs  lib.rs  main.rs  server.rs
src/binance/: api.rs  mod.rs
src/bitstamp/: api.rs  mod.rs
src/coinbase/: api.rs  mod.rs
