[package]
name = "exchange_tracker"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = ["rt", "macros", "rt-multi-thread", "time"] }
url = "2.2.2"
tokio-tungstenite = { version = "0.17.1", features = ["native-tls"] }
futures-util = "0.3.21"