[package]
name = "exchange_tracker"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = ["rt", "macros", "rt-multi-thread", "time", "sync"] }
url = "2.2.2"
tokio-tungstenite = { version = "0.17.1", features = ["native-tls"] }
futures-util = "0.3.21"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
reqwest = "0.11.10"
strum = { version = "0.24", features = ["derive"] }
tonic = "0.7.2"
prost = "0.10.4"
# tonic = { version="0.7.2", features = ["tls"] }
tokio-stream = "0.1.8"

[build-dependencies]
tonic-build = {version="0.7.2", features = ["default"]}