[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.7.2"
prost = "0.10.4"
tokio = { version = "1.12.0", features = ["rt", "macros", "rt-multi-thread", "time", "sync"] }
url = "2.2.2"
clap = "3.1.18"

[build-dependencies]
tonic-build = {version="0.7.2", features = ["default"]}